--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,10 +9,8 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
-    - name: Run a one-line script
-      run: echo Hello, world!
-    - name: Run a multi-line script
-      run: |
-        echo "Running Maven Build/Test"
-        mvn clean install
+    - name: Build
+      run: mvn clean install -DskipTests
+    - name: Test
+      run: mvn test
 
